--- a/css/style.css
+++ b/css/style.css
@@ -1187,7 +1187,7 @@ button:focus {
 
 .contact_info .info_item {
   position: relative;
-  padding-left: 45px; }
+  padding-left: 45px;float:left; }
   .contact_info .info_item i {
     position: absolute;
     left: 0;
@@ -1197,6 +1197,7 @@ button:focus {
     color: #8490ff;
     font-weight: 600; }
   .contact_info .info_item h6 {
+    margin-top: 5px;
     font-size: 16px;
     line-height: 24px;
     color: "Roboto", sans-serif;
