--- a/css/style.css
+++ b/css/style.css
@@ -2789,6 +2789,7 @@ h6 {
   margin-bottom: -30px; }
 
 .feature_item {
+  height: 500px;;
   padding: 50px 35px;
   border-radius: 10px;
   transition: all 300ms linear 0s;
