add line height for name in mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,6 +34,10 @@
 }
 
 @media (max-width:991px){
+
+	#my-name{
+		line-height: 130px;
+	}
 	/* Main Menu Area css
 	============================================================================================ */
     .navbar-toggler {
